--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "delivery-tracker",
-  "version": "2.7.3",
+  "version": "2.7.4",
   "author": {
     "name": "egg",
     "email": "i@egg.pe.kr"
@@ -74,6 +74,7 @@
     "cheerio": "^0.22.0",
     "commander": "^6.2.0",
     "moment": "^2.17.1",
+    "puppeteer": "^20.4.0",
     "request": "^2.79.0",
     "xml2js": "^0.4.17"
   }
