--- a/package.json
+++ b/package.json
@@ -64,11 +64,11 @@
     "grunt": "1.3.0",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-mocha-test": "^0.13.2",
+    "jest": "^29.5.0",
     "matchdep": "^1.0.1",
     "mocha": "^8.2.0",
     "nock": "^13.0.4",
-    "standard": "15.0.0",
-    "jest": "^29.5.0"
+    "standard": "15.0.0"
   },
   "dependencies": {
     "async": "^3.2.0",
@@ -77,6 +77,7 @@
     "moment": "^2.17.1",
     "puppeteer": "^20.4.0",
     "request": "^2.79.0",
+    "request-promise": "^4.2.6",
     "xml2js": "^0.4.17"
   }
 }
